write.sh